--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-@import url('https://fonts.googleapis.com/css?family=Londrina+Outline');
-
+@import url('https://fonts.googleapis.com/css?family=Strait');
 // Variables
 @import 'variables';
 // Bootstrap
